[gd_scene load_steps=7 format=2]

[ext_resource path="res://Reticle.png" type="Texture" id=1]
[ext_resource path="res://PickCast.gd" type="Script" id=2]
[ext_resource path="res://Player.gd" type="Script" id=3]
[ext_resource path="res://Hand.gd" type="Script" id=4]
[ext_resource path="res://vignette.png" type="Texture" id=5]

[sub_resource type="CapsuleShape" id=6]
height = 1.857

[node name="Player" type="RigidBody" groups=["snake_harmed", "snake_targeted", "triggers_elevator"]]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 2.44627, 0 )
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource( 3 )

[node name="Overlay" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="Overlay"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Reticle" type="TextureRect" parent="Overlay/CenterContainer"]
modulate = Color( 0.545098, 0.545098, 0.545098, 0.647059 )
margin_left = 480.0
margin_top = 268.0
margin_right = 544.0
margin_bottom = 332.0
rect_pivot_offset = Vector2( 32, 32 )
texture = ExtResource( 1 )

[node name="DamageVignette" type="TextureRect" parent="Overlay"]
modulate = Color( 1, 0, 0, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 6 )

[node name="Torso" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.95137, 0 )

[node name="Camera" type="Camera" parent="Torso"]
cull_mask = 1048573
far = 500.0

[node name="PickCast" type="RayCast" parent="Torso/Camera"]
enabled = true
exclude_parent = false
cast_to = Vector3( 0, 0, -5 )
collision_mask = 2
script = ExtResource( 2 )

[node name="AimCast" type="RayCast" parent="Torso/Camera"]
enabled = true
exclude_parent = false
cast_to = Vector3( 0, 0, -100 )

[node name="RightHand" type="Spatial" parent="Torso/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.617, -0.799, -1.262 )
script = ExtResource( 4 )

[node name="LeftHand" type="Spatial" parent="Torso/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.617, -0.799, -1.262 )
script = ExtResource( 4 )
